# template-cmake-googletest

./: CMakeLists.txt  README.rst
src/: CMakeLists.txt  sample.cpp  sample.h
tests/: CMakeLists.txt  fixtureQueue.h  sampleTests.cpp
